Fix: 피드 페이지 메타데이터 정합성 개선